--- a/Productmanager.html
+++ b/Productmanager.html
@@ -11,6 +11,7 @@
     <button id="add" onclick="addProducts() ">Thêm vào kho</button>
     
     <div>
+        <h1>Tìm kiếm</h1>
         <input type="text" id="search" oninput="searchProducts()" placeholder="Tìm kiếm ...">
     </div>
     <div id="resultSearch"></div>
