--- a/Productmanager.html
+++ b/Productmanager.html
@@ -8,7 +8,9 @@
 <body>
     <h1 id="title">Quản Lý Sản Phẩm</h1>
     <input type="text" id="product" placeholder="Tên sản phẩm ...">
-    <button id="add" onclick="addProducts() ">Thêm vào kho</button>
+    <div id="edit">
+        <button id="add" onclick="addProducts() ">Thêm vào kho</button>
+    </div>
     
     <div>
         <h1>Tìm kiếm</h1>
